--- a/Test/Jendo-dev/Jendo-Backend/Jendo-Backend/pom.xml
+++ b/Test/Jendo-dev/Jendo-Backend/Jendo-Backend/pom.xml
@@ -21,6 +21,7 @@
         <java.version>17</java.version>
         <springdoc.version>2.3.0</springdoc.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <firebase-admin.version>9.2.0</firebase-admin.version>
     </properties>
     
     <dependencies>
@@ -34,6 +35,12 @@
             <groupId>com.cloudinary</groupId>
             <artifactId>cloudinary-http44</artifactId>
             <version>1.32.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>${firebase-admin.version}</version>
         </dependency>
         
         <dependency>
