feat: Update navigation behavior for push notifications to always redirect to notifications screen

--- a/Test/Jendo-dev/Expo (3)/Expo/.gitignore
+++ b/Test/Jendo-dev/Expo (3)/Expo/.gitignore
@@ -37,3 +37,9 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+
+# Firebase and Google Services
+google-services.json
+android/app/google-services.json
+jendo-43b74-firebase-adminsdk-fbsvc-0cde941182.json
