--- a/Test/Jendo-dev/Jendo-Backend/Jendo-Backend/src/main/resources/application.yml
+++ b/Test/Jendo-dev/Jendo-Backend/Jendo-Backend/src/main/resources/application.yml
@@ -1,23 +1,17 @@
 spring:
   application:
     name: jendo-app
-  
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 10MB
-      max-request-size: 10MB
-  
+
   datasource:
     url: jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:jendo}?sslmode=disable
     username: postgres
-    password: imandi2002
+    password: jendo123
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
       minimum-idle: 5
       connection-timeout: 30000
-  
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -44,7 +38,7 @@ spring:
     from: MS_YQu52G@test-68zxl270qpk4j905.mlsender.net
 
 server:
-  port: 8080
+  port: 8081
 
 jwt:
   secret: ${JWT_SECRET:jendo-app-secret-key-for-jwt-authentication-must-be-at-least-64-characters-long-for-security}
